overflow issue sloved

--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,8 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  /* overflow-x: hidden; */
+  /* max-width: 100vw; */
 }
 :root {
   font-size: 62.5%;
@@ -22,4 +24,5 @@ body {
   /* overflow-y: hidden; */
   margin: 0;
   padding: 0;
+  max-width: 100vw !important;
 }
