--- a/src/sass/_certA.scss
+++ b/src/sass/_certA.scss
@@ -3,7 +3,6 @@
 .certificates {
   height: 74vh;
   width: 100vw;
-  max-width: 100vw;
 
   background-color: var(--bg-primary);
   // background-color: aqua;
