--- a/src/sass/_certificates.scss
+++ b/src/sass/_certificates.scss
@@ -1,5 +1,7 @@
 @use 'variables' as *;
 .cert-container {
+  // width: 100vw;
+  // max-width: 100vw;
   position: relative;
   background-color: var(--bg-primary);
   border-top: 2px solid var(--color-sec);
@@ -60,7 +62,7 @@
   }
   @keyframes eye {
     50% {
-      transform: translate(70%);
+      transform: translate(60%);
     }
     100% {
       transform: translate(0%);
