--- a/src/sass/_skills.scss
+++ b/src/sass/_skills.scss
@@ -84,8 +84,8 @@
         column-gap: 4rem;
       }
       .icon {
-        height: 6rem;
-        width: 6rem;
+        height: 7rem;
+        width: 7rem;
 
         &:hover,
         &:active {
